--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,19 +43,5 @@ jobs:
           mvn -B --file pom.xml release:prepare release:perform
 
       # Create a release
-
-      - name: Run JReleaser
-        uses: jreleaser/release-action@v2
-        env:
-          JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Persist logs
-
-      - name: JReleaser release output
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: jreleaser-release
-          path: |
-            out/jreleaser/trace.log
-            out/jreleaser/output.properties
+      # Using: mvn jreleaser:full-release
+      # TODO
