--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,15 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
+      # Prepare for upload to Maven Central
+      # https://jreleaser.org/guide/latest/examples/maven/staging-artifacts.html
+
+      - name: Build for release
+        uses:
+        run: |
+          mvn -Ppublication deploy -DaltDeploymentRepository=local::file:./target/staging-deploy
+          ls -laR ./target/staging-deploy
+
       # Post JARs to Maven Central
 
       - name: Release to Maven Central
@@ -40,7 +49,7 @@ jobs:
           export GPG_TTY=$(tty)
           git config user.name "${{ github.event.head_commit.committer.name }}"
           git config user.email "${{ github.event.head_commit.committer.email }}"
-          mvn -B --file pom.xml release:prepare release:perform
+      # mvn -B --file pom.xml release:prepare release:perform
 
       # Create a release
       # Using: mvn jreleaser:full-release
