Added JReleaser deploy config

--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,25 @@
                                 </artifacts>
                             </app>
                         </distributions>
+
+                        <!-- https://jreleaser.org/guide/latest/examples/maven/maven-central.html -->
+                        <signing>
+                            <active>ALWAYS</active>
+                            <armored>true</armored>
+                        </signing>
+                        <deploy>
+                            <maven>
+                                <nexus2>
+                                    <maven-central>
+                                        <active>ALWAYS</active>
+                                        <url>https://s01.oss.sonatype.org/service/local</url>;
+                                        <closeRepository>true</closeRepository>
+                                        <releaseRepository>true</releaseRepository>
+                                        <stagingRepositories>target/staging-deploy</stagingRepositories>
+                                    </maven-central>
+                                </nexus2>
+                            </maven>
+                        </deploy>
                     </jreleaser>
                 </configuration>
             </plugin>
@@ -194,6 +213,7 @@
     </build>
 
     <profiles>
+        <!-- https://jreleaser.org/guide/latest/examples/maven/staging-artifacts.html -->
         <profile>
             <id>publication</id>
             <build>
@@ -213,6 +233,7 @@
                             </execution>
                         </executions>
                     </plugin>
+
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
