--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,11 +32,6 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
-      # Check JReleaser config
-      - name: Check if JReleaser config is OK
-        run: |
-          mvn jreleaser:config
-
       # Prepare for upload to Maven Central
       # https://jreleaser.org/guide/latest/examples/maven/staging-artifacts.html
       - name: Build for release
@@ -51,8 +46,12 @@ jobs:
       # https://jreleaser.org/guide/latest/examples/maven/maven-central.html
       - name: Release to Maven Central
         env:
-          MAVEN_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          MAVEN_CENTRAL_TOKEN: ${{ secrets.SONATYPE_PASSWORD }}
-          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          JRELEASER_NEXUS2_USERNAME: ${{ secrets.JRELEASER_NEXUS2_USERNAME }}
+          JRELEASER_NEXUS2_PASSWORD: ${{ secrets.JRELEASER_NEXUS2_PASSWORD }}
+          JRELEASER_GPG_PASSPHRASE: ${{ secrets.JRELEASER_GPG_PASSPHRASE }}
+          JRELEASER_GPG_SECRET_KEY: ${{ secrets.JRELEASER_GPG_SECRET_KEY }}
+          JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.JRELEASER_GPG_PUBLIC_KEY }}
+          JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          mvn jreleaser:config
           mvn jreleaser:full-release
