Added copyright project setting for JReleaser

--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,7 @@
                 <configuration>
                     <jreleaser>
                         <project>
+                            <copyright>pi4j.com</copyright>
                             <java>
                                 <mainClass>${app.main.class}</mainClass>
                             </java>
