Added assembly plugin

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <name>Pi4J Board Info</name>
     <description>Java Utility Library providing info about the Raspberry Pi boards</description>
-    <url>https://github.com/FDelporte/PiHeaders</url>
+    <url>https://github.com/Pi4J/pi4j-board-info/</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -111,6 +111,30 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <attach>false</attach>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptors>
+                        <descriptor>src/main/assembly/assembly.xml</descriptor>
+                    </descriptors>
+                    <outputDirectory>${app.distribution.directory}</outputDirectory>
+                    <workDirectory>${project.build.directory}/assembly/work</workDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-distribution</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
             </plugin>
@@ -172,6 +196,7 @@
                                 <overwrite>true</overwrite>
                             </github>
                         </release>
+
                         <distributions>
                             <app>
                                 <artifacts>
