--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       # https://jreleaser.org/guide/latest/examples/maven/staging-artifacts.html
       - name: Build for release
         run: |
-          mvn -Ppublication deploy -DaltDeploymentRepository=local::file:./target/staging-deploy
+          mvn -ntp -B -Ppublication deploy -DaltDeploymentRepository=local::file:./target/staging-deploy
 
       - name: List files staged for release
         run: |
@@ -53,5 +53,5 @@ jobs:
           JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.JRELEASER_GPG_PUBLIC_KEY }}
           JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mvn jreleaser:config
-          mvn jreleaser:full-release
+          mvn -ntp -B jreleaser:config
+          mvn -ntp -B jreleaser:full-release
