--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
         <!-- https://jreleaser.org/guide/latest/examples/maven/staging-artifacts.html -->
         <profile>
             <id>publication</id>
+
             <build>
                 <plugins>
                     <plugin>
@@ -159,6 +160,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
+                        <version>3.2.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
