--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
         <jreleaser.version>1.3.1</jreleaser.version>
     </properties>
 
+    <scm>
+        <developerConnection>scm:git:ssh://git@github.com:Pi4J/pi4j-board-info.git</developerConnection>
+        <connection>scm:git:ssh://git@github.com:Pi4J/pi4j-board-info.git</connection>
+        <url>https://github.com/Pi4J/pi4j-board-info.git</url>
+    </scm>
+
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
