--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
                                 <nexus2>
                                     <maven-central>
                                         <active>ALWAYS</active>
-                                        <url>https://s01.oss.sonatype.org/service/local</url>
+                                        <url>https://oss.sonatype.org/service/local</url>
                                         <closeRepository>true</closeRepository>
                                         <releaseRepository>true</releaseRepository>
                                         <stagingRepositories>target/staging-deploy</stagingRepositories>
