--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,12 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-
     steps:
+      #- name: Get deployment approval
+      #  uses: trstringer/manual-approval@v1
+      #  with:
+      #    secret: ${{ github.TOKEN }}
+      #    approvers: FDelporte
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -64,8 +68,5 @@ jobs:
           JRELEASER_GPG_SECRET_KEY: ${{ secrets.JRELEASER_GPG_SECRET_KEY }}
           JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.JRELEASER_GPG_PUBLIC_KEY }}
           JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        only:
-          - main
-        when: manual
         run: |
           mvn -ntp -B jreleaser:full-release
