--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,16 +5,14 @@ name: Release to Maven Repository with Java CI, Maven, and JReleaser
 
 on:
   push:
-    branches: [ "main" ]
     tags:
       - '*'
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
