--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,11 @@
 
 name: Build and test with Java CI, Maven, and JReleaser
 
+on:
+  workflow_dispatch:
+  push:
+  pull_request:
+
 jobs:
   release:
     name: Build and test
