GitHub Action for build and test of all branches and commits

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
       # Build and run tests
       - name: Maven package
         run: |
-          mvn package
+          mvn -ntp -B package
