--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pi4j</groupId>
     <artifactId>pi4j-board-info</artifactId>
-    <version>0.0.1.ea</version>
+    <version>0.0.2.ea</version>
 
     <name>Pi4J Board Info</name>
     <description>Java Utility Library providing info about the Raspberry Pi boards</description>
@@ -145,8 +145,8 @@
                                     <maven-central>
                                         <active>ALWAYS</active>
                                         <url>https://oss.sonatype.org/service/local</url>
-                                        <closeRepository>true</closeRepository>
-                                        <releaseRepository>true</releaseRepository>
+                                        <closeRepository>false</closeRepository>
+                                        <releaseRepository>false</releaseRepository>
                                         <stagingRepositories>target/staging-deploy</stagingRepositories>
                                     </maven-central>
                                 </nexus2>
